<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_accesibility"
            android:icon="@drawable/accessibility"
            android:title="@string/accesibility" />
        <item
            android:id="@+id/nav_donation"
            android:icon="@drawable/donation1"
            android:title="@string/donation" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/help" />

    </group>

    <item android:title="Communicate y Comparte">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/user2"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_comment"
                android:icon="@drawable/comment1"
                android:title="@string/comments" />
        </menu>
    </item>

</menu>
