<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.ingva.com.myapplication03.EnviarComentarioFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/danos_comentario"
                android:textColor="@color/black_nigga"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="@string/danos_comentario" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="167dp"
                android:layout_gravity="center_horizontal|center|fill"
                android:autoText="false"
                android:gravity="center_horizontal|center|fill"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/lo_sentimos"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textDirection="firstStrongLtr"
                android:textIsSelectable="false"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="227dp"
                android:ems="10"
                android:hint="@string/describa"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:background="@drawable/boton_border_circle"
                    android:gravity="center|center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/atras" />

                <Button
                    android:id="@+id/button2"
                    android:background="@drawable/boton_border_circle"
                    android:gravity="center|center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enviar_comentarios" />
            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
