<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/app"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="example.ingva.com.myapplication03.ImcActivity"

        >

        <ImageButton
            android:id="@+id/imageIMC"
            android:layout_width="252dp"
            android:layout_height="155dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:background="@drawable/fondo_image_imc"
            android:contentDescription="@string/image_IMC"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/imc2"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_marginTop="15dp"
            android:text="@string/ingresa_datos"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black_nigga"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageIMC" />

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="77dp"

            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">


            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textColor="@color/black_nigga"
                android:text="@string/altura"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/spinner_altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/cm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black_nigga"
                android:text="@string/m"
                android:textSize="25sp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout1">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:layout_weight="2"

                android:text="@string/peso"
                android:textColor="@color/black_nigga"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/kg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_weight="1"
                android:text="@string/kg"
                android:textColor="@color/black_nigga"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_imc"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/boton_border_circle"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/calcular"
            android:textColor="@color/black_nigga"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="MissingConstraints" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />


</android.support.v4.widget.DrawerLayout>
